Bug 15993: New guideline section for Conformance testing. Updated associate files. Add hyper link from section to rider statement section.

--- a/Guidelines_2_1_SCAPRiderStatement.adoc
+++ b/Guidelines_2_1_SCAPRiderStatement.adoc
@@ -11,6 +11,8 @@
 :Author Initials: IOR
 :Revision: 0.01
 
+[[Guideline_2_1_SCAPRiderStatement]]
+
 === Khronos SCAP document usage
 
 include::cmn_KhronosSCAPRiderStatement.adoc[]
