--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -21,3 +21,4 @@ include::Guidelines_3_2_1_15008_SafetyCriticalRTOS.adoc[]
 
 include::Guidelines_3_2_2_15991_MemoryManagement.adoc[]
 
+include::Guidelines_3_2_3_15993_ConformanceTesting.adoc[]
