--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -26,6 +26,6 @@ The following is a list of all the SCAP guidelines when considering designing an
 |<<b15008,1>>  | List of SC RTOS and their unique features
 |<<b15991,2>>  | Memory management
 |<<b15993,3>>  | Conformance testing
-|4  | [red yellow-background]#xxxxx#
+|<<b16012,4>>  | The SC API
 |5  | [red yellow-background]#xxxxxx#
 |=============================
