--- a/Guidelines_3_2_1_15008_SafetyCriticalRTOS.adoc
+++ b/Guidelines_3_2_1_15008_SafetyCriticalRTOS.adoc
@@ -16,5 +16,23 @@
 [[b15008]]
 
 ==== 1 List of SC RTOS and their unique features
+This section lists some of the unique features some operating systems support and how those features can result in unintended behavior. This list is not exhaustive or complete, it is meant as a guide and place to share issues which were caused by the unique features of operating systems.
 
-Some text about RTOS
+[ width="90%", options="header", frame="topbot"]
+|=============================
+| RTOS Name | Vendor | Unique Features
+| DeOS | DDC-I | <<ftimePartitioning,Time Partitioning>>
+| Integrity | Green Hills Software | <<ftimePartitioning,Time Partitioning>>
+| Integrity-178 | Green Hills Software |<<ftimePartitioning,ARINC 653 Time Partitioning>>
+| Lynx | LynxOS | 
+| Lynx | LynxOS 178 | <<ftimePartitioning,ARINC 653 Time Partitioning>>
+| Nucleaus | Mentor Graphics | 
+| QNX | QNX |
+| ThreadX | Express Logic |
+| VxWorks | Wind River|
+| VxWorks 653 | Wind River| <<ftimePartitioning,ARINC 653 Time Partitioning>>
+|=============================
+
+[ftimePartitioning] 
+===== ARINC 653 Time Partitioning & Hard Time Partitioning  
+The ARINC 653 specification defines time partitioning where a process has control of the CPU for a specific amount of time and then the operating system will do a context switch even if the application is not done executing. This can be a problem for APIs which internally use locking mechanisms because the API has no understanding of when the time partition is ending. As such it is possible that one process locks a mutex/semaphore/... then is context switched and prevents all other processes from using that locked object. This differs from the regular lock contention issue in that the Time Partitioning scheduler will not allow the process holding the lock to run, while a priority preemptive scheduler may wake up the process holding the lock to let it unlock.
