--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -26,3 +26,6 @@ include::Guidelines_3_2_3_15993_ConformanceTesting.adoc[]
 include::Guidelines_3_2_4_16012_SCAPISubSetOfGenPurAPI.adoc[]
 
 include::Guidelines_3_2_5_16024_ExplicitTimeOutValues.adoc[]
+
+include::Guidelines_3_2_6_3_Misra.adoc[]
+
