--- a/cmn_Acknowledgements.adoc
+++ b/cmn_Acknowledgements.adoc
@@ -16,7 +16,7 @@
 Safety Critical API Development guidelines,
 requirements [red yellow-background]#and ??? (doc 3)# is the result of the contributions of many people, representing a cross section of the safety critical software development community in a range of industries. Following is a partial list of the contributors, including the company that they represented as the time of their contribution:
 
-.Chairman
+.Working group chair:
 - Erik Noreke, independent
 
 .External experts:
