--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -20,7 +20,9 @@
 
 The following is a list of all the SCAP guidelines when considering designing and implementing a SC API.
 
-[cols="^4,10", width="90%", options="header", frame="topbot"]
+[[TableListOfGuidelines, 3.1.1]]
+.List of guidelines
+[caption="Table 3.1.1: ", cols="^4,10", width="90%", options="header", frame="topbot"]
 |=============================
 |Guideline | Description 
 |<<b15008,1>>  | List of SC RTOS and their unique features
