--- a/Guidelines_2_0_Overview.adoc
+++ b/Guidelines_2_0_Overview.adoc
@@ -9,9 +9,9 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.01
+:Revision: 0.02
 
-== Overview
+== 2.0 Overview
 
 Some Khronos SCAP overview text
 
