--- a/Guidelines_2_1_SCAPRiderStatement.adoc
+++ b/Guidelines_2_1_SCAPRiderStatement.adoc
@@ -9,10 +9,10 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.01
+:Revision: 0.02
 
 [[Guideline_2_1_SCAPRiderStatement]]
 
-=== Khronos SCAP document usage
+=== 2.1 Khronos SCAP document usage
 
 include::cmn_KhronosSCAPRiderStatement.adoc[]
