--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -11,7 +11,7 @@
 :Author Initials: IOR
 :Revision: 0.02
 
-== Guidelines
+== 3.0 Guidelines
 
 Some text about guidelines in general. Refer to the rider statement.
 
