--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -7,16 +7,16 @@
 //
 // Description: Guidelines 3.1 Guidelines  list
 //
-// Notes: The hyperlink ID, <<b?????,?>> for each requirement orguideline in 
+// Notes: The hyperlink ID, <<gh?????,?>> for each requirement orguideline in 
 //        this documents is a representaion of Khronos SCAP Bugzilla issue 
-//        tracking number. The letter 'b' before the number must be present for 
+//        tracking number. The letter 'gh' before the number must be present for 
 //        Asciidoc to accept and create a hyperlink.
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
 :Revision: 0.02
 
-=== Guidelines list
+=== 3.1 Guidelines list
 
 The following is a list of all the SCAP guidelines when considering designing and implementing a SC API.
 
