General: Remove incorrect manual numbering of sections and chapters (it is performed automatically)

--- a/Guidelines_2_1_SCAPRiderStatement.adoc
+++ b/Guidelines_2_1_SCAPRiderStatement.adoc
@@ -13,6 +13,6 @@
 
 [[Guideline_2_1_SCAPRiderStatement]]
 
-=== 2.1 Khronos SCAP document usage
+=== Khronos SCAP document usage
 
 include::cmn_KhronosSCAPRiderStatement.adoc[]
