--- a/Guidelines_2_2_Glossary.adoc
+++ b/Guidelines_2_2_Glossary.adoc
@@ -11,7 +11,7 @@
 :Author Initials: IOR
 :Revision: 0.02
 
-=== 2.2 Glossary
+=== Glossary
 
 List of terms or definitions used within this document.
 
