--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -16,7 +16,7 @@
 :Author Initials: IOR
 :Revision: 0.02
 
-=== 3.1 Guidelines list
+=== Guidelines list
 
 The following is a list of all the SCAP guidelines when considering designing and implementing a SC API.
 
