--- a/Guidelines_2_1_SCAPRiderStatement.adoc
+++ b/Guidelines_2_1_SCAPRiderStatement.adoc
@@ -13,6 +13,6 @@
 
 [[Guideline_2_1_SCAPRiderStatement]]
 
-=== Khronos SCAP document usage
+=== {chapter-id}.{counter:chapter-sub-id}. Khronos SCAP document usage
 
 include::cmn_KhronosSCAPRiderStatement.adoc[]
