--- a/Guidelines_Appendices.adoc
+++ b/Guidelines_Appendices.adoc
@@ -11,6 +11,9 @@
 :Author Initials: IOR
 :Revision: 0.01
 
+// Automatic appendix lettering, use {counter:appendix-id}  
+:appendix-id: @ 
+
 Appendices
 ----------
 include::Guidelines_Appendix_A_1.adoc[]
