--- a/Guidelines_0_MainTopLevelAllIncludes.adoc
+++ b/Guidelines_0_MainTopLevelAllIncludes.adoc
@@ -41,10 +41,12 @@
 :doc_revision: 1   
 :doc_version: 0.02 
 :toc-placement: manual
-:toclevels: 3
+:toclevels: 2
 :toc:
 :toc2:
-:numbered:
+
+// Automatic chapter numbering, use {counter:chapter-id}  
+:chapter-id: 0
 
 <<<
 include::GuidelinesCoverPage.adoc[]
