--- a/Guidelines_3_2_1_15008_SafetyCriticalRTOS.adoc
+++ b/Guidelines_3_2_1_15008_SafetyCriticalRTOS.adoc
@@ -15,10 +15,12 @@
 // 3_1_GuidelinesList.adoc 
 [[b15008]]
 
-==== 1 List of SC RTOS and their unique features
+==== {chapter-id}.{counter:chapter-sub-id}.{counter:section-id}. List of SC RTOS and their unique features
 This section lists some of the unique features some operating systems support and how those features can result in unintended behavior. This list is not exhaustive or complete, it is meant as a guide and place to share issues which were caused by the unique features of operating systems.
 
-[ width="90%", options="header", frame="topbot"]
+[[TableListOfGuidelines, 3.2.1]]
+.List of RTOS
+[caption="Table 3.2.1: ", width="90%", options="header", frame="topbot"]
 |=============================
 | RTOS Name | Vendor | Unique Features
 | DeOS | DDC-I | <<ftimePartitioning,Time Partitioning>>
