--- a/Guidelines_3_2_4_16012_SCAPISubSetOfGenPurAPI.adoc
+++ b/Guidelines_3_2_4_16012_SCAPISubSetOfGenPurAPI.adoc
@@ -15,7 +15,7 @@
 // 3_1_GuidelinesList.adoc 
 [[b16012]]
 
-==== 4 The SC API 
+==== {chapter-id}.{chapter-sub-id}.{counter:section-id}. The SC API 
 
 The SC version of the API should be a subset of the API in question. Allowing applications written for the SC version of the API to compile, link and function using a library or driver which provides the more general API. By keeping the SC API as a subset we do not introduce more IP than that which exists in the already ratified version of the standard. From a Khronos perspective this simplifies IP rights and ratification of the SC standard.
 
