--- a/Guidelines_1_0_Introduction.adoc
+++ b/Guidelines_1_0_Introduction.adoc
@@ -38,10 +38,10 @@ SCAP is open to both Khronos members and invited experts from the various SC ind
 
 We assume the reader has experience in software development in general and has at a least some rudimentary understanding of programming best practices and the implications and consequences of writing software if not written with rigor and oversight.
 
-=== {chapter-id}.{counter:chapter-sub-id} The Guidelines
+=== {chapter-id}.{counter:chapter-sub-id}. The Guidelines
 
 This document, referred to as the Khronos SCAP Guidelines document, gives guidance on various aspects of SC programming practices, SC programming standards or SC processes that can be used when designing an API which it to be used for SC software development. 
 
-=== {chapter-id}.{counter:chapter-sub-id} The Requirements
+=== {chapter-id}.{counter:chapter-sub-id}. The Requirements
 
 There is an accompanying Khronos SCAP Requirements document which states development requirements for developing the same Khronos SC API. The Requirements document is meant to be used together with this Guidelines document.
