--- a/Guidelines_2_0_Overview.adoc
+++ b/Guidelines_2_0_Overview.adoc
@@ -16,11 +16,9 @@
 
 == {counter:chapter-id}. Overview
 
-Some Khronos SCAP overview text
+This document contains API design guidelines to be considering when creating or refactoring a Khronos API for use in a safety critical (SC) environment. The guidelines contained here are considered non-mandatory but advisory, unlike the those specified in the SCAP Requirements document.
 
-The SCAP is an IP free zone. Information, principles, requirements and guidelines are about safety critical
-specifications in general. SCAP do not discuss anything that may contain intellectual
-property or have IP implications in the SCAP. Implementation details belong in other Khronos working groups.
+The guidelines have been given on the advice from experts in various SC fields or domains. Khronos SCAP adopts the guidelines based on development and implementation experience of those experts when satisfying a domain’s software or hardware development requirements, safety requirements and development standard. It is highly recommended that all the guidelines while not mandatory should be reviewed when creating or refactoring a Khronos API as they can act as provoking stimuli to the formation of other safety considerations in the design or refactor of the API which may otherwise be overlooked.
 
 include::Guidelines_2_1_SCAPRiderStatement.adoc[]
 
