--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -33,4 +33,5 @@ The following is a list of all the SCAP guidelines when considering designing an
 |<<gh3,{counter:section-id}>>     | MISRA compliance
 |<<b16018,{counter:section-id}>>  | Real Time
 |<<b16159,{counter:section-id}>>  | Scheduling
+|<<b16011,{counter:section-id}>>  | Debug Functionality
 |=============================
