--- a/cmn_Terminology.adoc
+++ b/cmn_Terminology.adoc
@@ -11,6 +11,12 @@
 :Author Initials: IOR
 :Revision: 0.02
 
+===== shall
+When used with reference in the context of the Khronos SC Requirements Document the word *shall* is the equivalent to a mandatory requirement. Some quality standards like ISO 26262 and RFC 2119 (https://www.ietf.org/rfc/rfc2119.txt[https://www.ietf.org/rfc/rfc2119.txt]).
+
+===== should
+When used with reference in the context of the Khronos SC Requirements Document the word *should* is the equivalent to a recommended action.
+
 ===== requirement
 When used with reference in the context of the Khronos SC Requirements Document the word requirement means a requirement listed in the table of requirements or a requirement sub-part is compulsory, a necessary condition, behavior or action that must be implemented or carried out.
 
