--- a/cmn_Terminology.adoc
+++ b/cmn_Terminology.adoc
@@ -12,13 +12,13 @@
 :Revision: 0.02
 
 ===== shall
-When used with reference in the context of the Khronos SC Requirements Document the word *shall* is the equivalent to a mandatory requirement. Some quality standards like ISO 26262 and RFC 2119 (https://www.ietf.org/rfc/rfc2119.txt[https://www.ietf.org/rfc/rfc2119.txt]).
+When used with reference in the context of the Khronos SC Guidelines Document the word *shall* is the equivalent to a mandatory requirement. Some quality standards like ISO 26262 and RFC 2119 (https://www.ietf.org/rfc/rfc2119.txt[https://www.ietf.org/rfc/rfc2119.txt]).
 
 ===== should
-When used with reference in the context of the Khronos SC Requirements Document the word *should* is the equivalent to a recommended action.
+When used with reference in the context of the Khronos SC Guidelines Document the word *should* is the equivalent to a recommended action.
 
 ===== requirement
-When used with reference in the context of the Khronos SC Requirements Document the word requirement means a requirement listed in the table of requirements or a requirement sub-part is compulsory, a necessary condition, behavior or action that must be implemented or carried out.
+When used with reference in the context of the Khronos SC Guidelines Document the word requirement means a requirement listed in the table of requirements or a requirement sub-part is compulsory, a necessary condition, behavior or action that must be implemented or carried out.
 
 ===== guideline
 When used with reference in the context of the Khronos SC Guidelines Document the word guideline means a guideline listed in the table of guidelines or a guideline sub-part is a principle, piece of advice, instruction that by the discretion of the reader may or may not be implemented or carry out.
