New item: SC API Extensions

--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -46,3 +46,6 @@ include::Guidelines_3_2_8_16159_Scheduling.adoc[]
 include::Guidelines_3_2_9_16011_DebugFunctionality.adoc[]
 
 include::Guidelines_3_2_10_6_UniqueID.adoc[]
+
+include::Guidelines_3_2_11_5_SCAPIExtensions.adoc[]
+
