--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -35,4 +35,5 @@ The following is a list of all the SCAP guidelines when considering designing an
 |<<b16159,{counter:section-id}>>  | Scheduling
 |<<b16011,{counter:section-id}>>  | Debug Functionality
 |<<gh6,{counter:section-id}>>     | Unique ID
+|<<gh5,{counter:section-id}>>     | SC API extensions
 |=============================
