New item: Reduce optioned to a minimum

--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -47,3 +47,6 @@ include::Guidelines_3_2_9_16011_DebugFunctionality.adoc[]
 
 include::Guidelines_3_2_11_5_SCAPIExtensions.adoc[]
 
+include::Guidelines_3_2_12_7_ReduceOptionsToAMinimum.adoc[]
+
+
