New item: Error handling of conditions

--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -49,4 +49,7 @@ include::Guidelines_3_2_11_5_SCAPIExtensions.adoc[]
 
 include::Guidelines_3_2_12_7_ReduceOptionsToAMinimum.adoc[]
 
+include::Guidelines_3_2_13_8_HandlingErrorConditions.adoc[]
+
+
 
