New item: Lost context

--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -51,5 +51,7 @@ include::Guidelines_3_2_12_7_ReduceOptionsToAMinimum.adoc[]
 
 include::Guidelines_3_2_13_8_HandlingErrorConditions.adoc[]
 
+include::Guidelines_3_2_14_11_LostContext.adoc[]
+
 
 
