--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -37,4 +37,5 @@ The following is a list of all the SCAP guidelines when considering designing an
 |<<gh5,{counter:section-id}>>     | SC API extensions
 |<<gh7,{counter:section-id}>>     | Reduce function parameters' complexity
 |<<gh8,{counter:section-id}>>     | Handling of error conditions
+|<<gh11,{counter:section-id}>>    | Lost context
 |=============================
