--- a/Guidelines_3_2_4_16012_SCAPISubSetOfGenPurAPI.adoc
+++ b/Guidelines_3_2_4_16012_SCAPISubSetOfGenPurAPI.adoc
@@ -42,3 +42,5 @@ Long hardware prototype times, limited quantities, and specialized SC driver dev
 image::images/3_2_4_2_ProfileVennDiagram.png[width=50%, align=center, caption="Figure 3.2.4.2: "]
 
 This Venn diagram shown in figure<<ProfileVennDiagram>> shows that while the profile triangle is a general rule of thumb, that the different profiles may include additional APIs and functionality to meet the requirements of the specific profile. It also shows that the SC Core API Profile can include Desktop Extensions and is not limited to only the Desktop Core API.
+
+NOTE: The mixing of safe and non-safety critical code is generally not allowed in most safety standards unless it can be shown there is no possibility of interference by the non-safe code with safe code. The term refered to is partioning. The degree of partitioning that may need to be obtained according to a safety standard is generally the higher the critical function the more the seperation required. The same general rule applies where two different items or components with different levels of safety rigor applied (different levels of risk) are used in the same system. The component with the lower risk must not interfere with the part with the higher critical risk.
