New content: A system should facilitate the communication of all its operational states to its client or monitoring system efficiently and effectively to aid its development, testing regime and deployment. A system could communicate state using:

--- a/Guidelines_3_0_Guidelines.adoc
+++ b/Guidelines_3_0_Guidelines.adoc
@@ -53,5 +53,7 @@ include::Guidelines_3_2_13_8_HandlingErrorConditions.adoc[]
 
 include::Guidelines_3_2_14_11_LostContext.adoc[]
 
+include::Guidelines_3_2_15_16_NonRecoverableErrorConditionsReportingStatus.adoc[]
+
 
 
