--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -38,4 +38,5 @@ The following is a list of all the SCAP guidelines when considering designing an
 |<<gh7,{counter:section-id}>>     | Reduce function parameters' complexity
 |<<gh8,{counter:section-id}>>     | Handling of error conditions
 |<<gh11,{counter:section-id}>>    | Lost context
+|<<gh16,{counter:section-id}>>    | Non recoverable error conditions and reporting status
 |=============================
